--- a/src/components/SideNavBar/SideNavBar.module.css
+++ b/src/components/SideNavBar/SideNavBar.module.css
@@ -56,7 +56,7 @@
         z-index: 10000;
     }
 
-    .navListIcon {
+    .navLink {
         width: 100%;
         width: 40px;
         height: 40px;
